Filter data from Map<Department, List<Employee>>